Add media worker final video compose
